* Client: fee stats fpor WebUI/Blocks are being saved now
* Client/WebUI: "Limit range" checkbox added to SPB graphs
* Client: Fixed problem with expiring mempool txs too soon because of overflowing ints
* Client: Minimum fee per byte (for mempool and routing) is a floating point value now
* Client: Send "feefilter" massage to all the peers whenever minimum fee per byte changes

1.9.1 - 2017-08-01
* Client: Removed AnySendTimeout as it was causing problems with limited UL bandwidth
* Client/WebUI: The font is set to Arial
* Client/WebUI/Network: Show how long each connection has been active and removes lest sent/rcvd command
* Client: Write new blocks and UTXO set to disk 2 seconds after the last successfull AcceptBlock()
* Client/WebUI/Blocks: The block's fee chart appears as a popup now
* Client/WebUI: Pressing ESC closes popups
* Client/WebUI: Removed Segwit related statistics
* Client/WebUI/Wallet: Show Segwit deposit addresses if segwit is active
* Client: WebUI/Blocks shows new blocks' extended fee stats
* Added support fro BIP91 in chain.PreCheckBlock() as well as on WebUI (mining info)
* LIb: fixed panic in chain.NewChainExt() when called with nil options (used by importblocks tool)
* Client: When calculating initial average block size, assume MAX_BLOCK_SIZE for the purged ones
* Client: changed configuration related data
* Client: Changed rules of choosing the "slowest" peer to drop
* Client/WebIO: shows New York Agreement support related info in "Block" and "Miners" tabs
* Client: "SaveOnDisk" config option for "TXPool" and "AllBalances" (defaults to false)
* Client: save mempool on exit and load in on startup
* Client: on close save all balances to "balances.db" (for quicker start next time)
* Client: adding of a new block to block's db is accounted inside the queue time statistics
* Client: abort saving of UITXO.db before starting to precess a new block