@@ -141,7 +141,7 @@ func list_txs(par string) {
 	network.TxMutex.Lock()
 	defer network.TxMutex.Unlock()
 
-	sorted := make(usif.SortedTxToSend, len(network.TransactionsToSend))
+	sorted := make(network.SortedTxToSend, len(network.TransactionsToSend))
 	for _, v := range network.TransactionsToSend {
 		sorted[cnt] = v
 		cnt++
